--- a/style.css
+++ b/style.css
@@ -349,6 +349,84 @@ header .icons #flower-bars{
     color:var(--black);
 }
 
+.birthdays .box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap:1.5rem;
+}
+
+.birthdays .box-container .box{
+    background: #fff;
+    border:.1rem solid rgba(0,0,0,.2);
+    border-radius: .5rem;
+    box-shadow: var(--box-shadow);    
+}
+
+.birthdays .box-container .box .image{
+    height: 25rem;
+    width: 100%;
+    padding:1.5rem;
+    overflow: hidden;
+    position: relative;
+}
+
+.birthdays .box-container .box .image img{
+    height: 100%;
+    width: 130%;
+    border-radius: .5rem;
+    object-fit: cover;
+}
+
+.birthdays .box-container .box .image .fa-seedling{
+    position: absolute;
+    top:2.5rem; right: 2.5rem;
+    height: 5rem;
+    width: 5rem;
+    line-height: 5rem;
+    text-align: center;
+    font-size: 2rem;
+    background:skyblue;
+    border-radius: 50%;
+    color:var(--black);
+}
+
+.birthdays .box-container .box .image .fa-seedling:hover{
+    background-color: var(--red);
+    color:#fff;
+}
+
+.birthdays .box-container .box .content{
+    padding:2rem;
+    padding-top: 0;
+}
+
+.birthdays .box-container .box .content .stars{
+    padding-bottom: 1rem;
+}
+
+.birthdays .box-container .box .content .stars i{
+   font-size: 1.7rem;
+   color:var(--red);
+}
+
+.birthdays .box-container .box .content h3{
+    color:var(--black);
+    font-size: 2.5rem;
+}
+
+.birthdays .box-container .box .content p{
+    color:var(--light-color);
+    font-size: 1.6rem;
+    padding:.5rem 0;
+    line-height: 1.5;
+}
+
+.birthdays .box-container .box .content .price{
+    color:var(--red);
+    margin-left: 1rem;
+    font-size: 2.5rem;
+}
+
 
 
 
